# QuantaPlus

./: AMO_test.cpp  Braket_test.cpp  Doxyfile  LICENSE  Makefile  MatrixExp.cpp  Polygamma.cpp  QUANTA.out  QUANTx.out  README.md  RunTests.out  a.out  braket.h  braket.tpp  constants.h  example1.cpp  hermit.cpp  hydrogenatom.h  install  latex_results.tex  matrix.h  matrix.tpp  operators.h  operators.tpp  plot.out  quantity.cpp  quantity.h  test.tex  utilities.cpp  utilities.h  wmakefile
doc/: Analysis and design.aux  Analysis and design.tex  QantaPlus.aux  QantaPlus.out  QantaPlus.tex  QantaPlus.toc  ref.bib
examples/: AMO_test.cpp  Braket_test.cpp  Double_Well.cpp  Harmonic_Oscillator.cpp  QCD_example.cpp  Rb87_hyperfine_structure.cpp  angular_momentum_test.cpp  braket_test.cpp  euler.cpp  example1.cpp  fullopr.cpp  latex_test.cpp  latexmluti.cpp  oscillating_magnetic_field.cpp  shift.cpp  states.cpp  test_ClebschGordon.cpp  test_angular-momentum_test.cpp  test_eigenvalue.cpp  test_latex.cpp  test_plot.cpp
include/: Doxyfile  a.out  angularmomentum.h  angularmomentum.hpp  braket.h  braket.hpp  braket.tpp  cgc.h  cgc.hpp  constants.h  doc.tex  eigensystem.cpp  hard.cpp  hard2.cpp  latex.h  latex.hpp  list2.cpp  lists.cpp  operators.h  operators.hpp  operators.tpp  plot.h  plot.hpp  plt_all.h  test_braket.cpp  (+12 more)
tests/: CMakeLists.txt  a.out  gtest_QM_operators.cpp  gtest_braket.cpp  qtest.cpp  test_ClebschGordon.cpp  test_angular-momentum.cpp  test_angular-momentum_test.cpp  test_braket.cpp  test_clebschGordon.cpp  test_eigenvalue.cpp  test_latex.cpp  test_operators.cpp
(+383 files in other folders)
